# rbop

./: Cargo.toml  README.md
examples/: ascii_calc.rs  window_calc.rs
rbop_examples/: ascii_calc.rs
src/: decimal_ext.rs  error.rs  evaluate.rs  lib.rs  nav.rs  node.rs  node_old.rs  number.rs  numeric.rs  render.rs  serialize.rs  test.rs  tests.rs
src/node/: common.rs  compiled.rs  function.rs  mod.rs  parser.rs  simplified.rs  structured.rs  unstructured.rs
src/node/unstructured/: layout.rs  mod.rs  navigation.rs  node.rs  serialize.rs  upgrade.rs
src/renderers/: ascii_renderer.rs  mod.rs
src/tests/: bench.rs  evaluation.rs  manipulation.rs  mod.rs  navigation.rs  number.rs  render.rs  simplified.rs  upgrade.rs  util.rs
