[package]
name = "rbop"
version = "0.1.0"
authors = ["Aaron Christiansen <aaronc20000@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/AaronC81/rbop"
repository = "https://github.com/AaronC81/rbop"
description = "Rust framework for writing mathematical expression editors"   

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = { version = "1.15", default-features = false, features = ['maths'] }

# !!! Uncomment the below to compile the examples !!!
# [dev-dependencies]
# termion = "1.5.6"
# speedy2d = "1.1.0"