[package]
name = "rbop"
version = "0.2.0"
authors = ["Aaron Christiansen <aaronc20000@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/AaronC81/rbop"
repository = "https://github.com/AaronC81/rbop"
description = "Rust framework for writing mathematical expression editors"

[lib]
doctest = false

[dependencies]
rust_decimal = { version = "= 1.23.1", default-features = false, features = ["maths"] }
num-traits = { version = "0.2.14", default-features = false }
num-integer = { version = "0.1.44", default-features = false }
termion = { version = "1.5.6", optional = true }
speedy2d = { version = "1.1.0", optional = true }

[features]
examples = ["termion", "speedy2d"]
